--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tweetie Demo</title>
+    <title>Tweetie Demo - Simple Twitter Feed Plugin</title>
+    <meta name="description" content="Simple yet powerful plugin to show your Tweets on your site.">
+    <meta name="keywords" content="Twitter, jQuery, Plugin, Tweetie, JavaScript, PHP">
+    <meta name="author" content="Sonny T.">
     <style type="text/css">
         body {
             background: #ECF1F2;
